--- a/package.json
+++ b/package.json
@@ -7,16 +7,30 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.12.3",
+    "array-move": "^3.0.1",
+    "axios": "^0.21.1",
+    "concurrently": "^5.3.0",
+    "moment": "^2.29.1",
+    "moment-timer": "^1.3.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-hotkeys": "^2.0.0",
+    "react-modal": "^3.12.1",
     "react-redux": "^7.1.3",
-    "react-scripts": "4.0.2"
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "4.0.2",
+    "react-select": "^4.1.0",
+    "react-sortable-hoc": "^1.11.0",
+    "react-textarea-autosize": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
+    "server": "npm run start --prefix server",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "dev": "concurrently \"npm run server\" \"npm run start\""
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -32,5 +46,11 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app), using the [Redux](https://redux.js.org/) and [Redux Toolkit](https://redux-toolkit.js.org/) template.",
+  "main": "index.js",
+  "devDependencies": {},
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
