--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "react-textarea-autosize": "^8.3.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "set PORT=3006 && react-scripts start",
     "server": "npm run start --prefix server",
     "build": "react-scripts build",
     "test": "react-scripts test",
