--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://dvcarry.github.io/doit",
   "name": "do",
   "version": "0.1.0",
   "private": true,
@@ -14,6 +15,9 @@
     "moment": "^2.29.1",
     "moment-timer": "^1.3.0",
     "react": "^17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
+    "react-compound-timer": "^1.2.0",
+    "react-document-title": "^2.0.3",
     "react-dom": "^17.0.1",
     "react-hotkeys": "^2.0.0",
     "react-modal": "^3.12.1",
@@ -22,7 +26,8 @@
     "react-scripts": "4.0.2",
     "react-select": "^4.1.0",
     "react-sortable-hoc": "^1.11.0",
-    "react-textarea-autosize": "^8.3.1"
+    "react-textarea-autosize": "^8.3.1",
+    "recharts": "^2.0.9"
   },
   "scripts": {
     "start": "set PORT=3006 && react-scripts start",
@@ -30,8 +35,11 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "dev": "concurrently \"npm run server\" \"npm run start\""
+    "dev": "concurrently \"npm run server\" \"npm run start\"",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
+  "proxy": "http://localhost:5002",
   "eslintConfig": {
     "extends": "react-app"
   },
@@ -49,7 +57,9 @@
   },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app), using the [Redux](https://redux.js.org/) and [Redux Toolkit](https://redux-toolkit.js.org/) template.",
   "main": "index.js",
-  "devDependencies": {},
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
+  },
   "keywords": [],
   "author": "",
   "license": "ISC"
